--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/nodemailer": "^6.4.17",
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.292.0",
     "next": "^15.0.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.3.1",
