--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-  },
+    "lint": "next lint",
+"postbuild": "next-sitemap"  },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -45,6 +45,7 @@
     "embla-carousel-react": "^8.0.0-rc14",
     "lucide-react": "^0.292.0",
     "next": "^15.0.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
